--- a/styles.css
+++ b/styles.css
@@ -1,13 +1,74 @@
 * {margin: 0; padding: 0}
-body {background: #000; margin: 0 15rem 0 15rem}
-canvas {display: block;}
-h1 {font-size: 7rem; padding-top: 8rem}
-h3 {
-    /*font-size: 7rem; */
-    padding-top: 8rem
+body {
+    background-color: #111111;
+    color: white}
+.container-body { margin: 0 20rem 0 20rem }
+.font-color-green { color: #0f0 !important; }
+canvas {
+    display: block;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: -1;
 }
-p {padding-top: 1rem; font-size: 22px}
+h1 {
+    font-size: 70px;
+    padding-top: 8rem;
+    font-weight: normal;
+}
+h2 {
+    font-size: 30px;
+}
+h4 {
+    font-size: 1.5rem;
+}
+p {
+    font-size: 15px
+}
+.font-size-20 {
+    font-size: 20px;
+}
+.font-size-5 {
+    font-size: 20px;
+}
+
+.padding-top-0-5 {padding-top: 0.5rem}
+.padding-top-1 {padding-top: 1rem}
+.padding-top-1-5 {padding-top: 1.5rem}
 .padding-top-2 {padding-top: 2rem}
+.padding-top-2-5 {padding-top: 2.5rem}
+.padding-top-3 {padding-top: 3rem}
+.padding-top-3-5 {padding-top: 3.5rem}
+
+.padding-top-8 {
+    padding-top: 8rem;
+}
+
+.padding-left-0-5 {padding-left: 0.5rem}
+.padding-left-1 {padding-left: 1rem}
+.padding-left-1-5 {padding-left: 1.5rem}
+.padding-left-2 {padding-left: 2rem}
+.padding-left-2-5 {padding-left: 2.5rem}
+.padding-left-3 {padding-left: 3rem}
+.padding-left-3-5 {padding-left: 3.5rem}
+.padding-left-4 {padding-left: 4rem}
+.padding-left-4-5 {padding-left: 4.5rem}
+.padding-left-5 {padding-left: 5rem}
+.padding-left-5-5 {padding-left: 5.5rem}
+.padding-left-6 {padding-left: 6rem}
+.padding-left-6-5 {padding-left: 6.5rem}
+.padding-left-7 {padding-left: 7rem}
+.padding-left-7-5 {padding-left: 7.5rem}
+.padding-left-8 {padding-left: 8rem}
+
+.text-right {text-align: right}
+.text-right {text-align: right}
+.text-right {text-align: right}
+.li-right {direction: rtl;
+    /*text-align: right*/
+}
 .text-right {text-align: right}
 .text-center {text-align: center}
 .text-wrap {text-wrap: inherit}
@@ -15,5 +76,88 @@ p {padding-top: 1rem; font-size: 22px}
 .margin-left-10 {margin-left: 10rem}
 
 .ul-without-dots {
-    list-style-type: none;
+    list-style-type: square;
+}
+li::marker {
+    color: lime;
+}
+
+.width-20-rem {
+    width: 30rem;
+}
+
+.width-5-rem {
+    width: 5rem;
+}
+
+.width-50-percent {
+    width: 50%;
+}
+
+.d-flex {
+    display: flex;
+}
+
+.flex-gap-1 {
+    gap: 1rem;
+}
+
+.li-div-text {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.justify-content-center {
+    justify-content: center;
+}
+
+.justify-content-right {
+    justify-content: right;
+}
+
+.justify-content-left {
+    justify-content: left;
+}
+
+.white-text {
+    color: white;
+}
+
+.position-absolute {
+    position: absolute;
+}
+
+
+.img-smoothie {
+    padding-left: 54rem;
+    margin-top: -2rem;
+}
+
+header {
+    top: 0;
+    position: sticky;
+    display: flex;
+    background-color: #111111;
+    justify-content: space-between;
+    margin: 1rem 2rem 1rem 2rem;
+}
+
+canvas {
+    display: block;
+    position: absolute;
+    top:0;
+    left:0;
+}
+
+
+
+.scrolling-wrapper {
+    overflow-x: scroll;
+    overflow-y: hidden;
+    white-space: nowrap;
+
+    .card {
+        display: inline-block;
+    }
 }
